--- a/midterm-project/pyproject.toml
+++ b/midterm-project/pyproject.toml
@@ -5,9 +5,12 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.121.0",
     "jupyter>=1.1.1",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "requests>=2.32.5",
     "scikit-learn>=1.7.2",
+    "uvicorn>=0.38.0",
     "xgboost>=3.1.1",
 ]
