update CI pipeline

--- a/.github/workflows/midterm-project-ci-cd.yaml
+++ b/.github/workflows/midterm-project-ci-cd.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main  # deploy on main branch push
+    paths:
+      - "midterm-project/**"
+      - "!midterm-project/**/*.ipynb"
+      - "!midterm-project/**/README.md"
   #workflow_dispatch:
 
 jobs:
