--- a/.github/workflows/midterm-project-ci-cd.yaml
+++ b/.github/workflows/midterm-project-ci-cd.yaml
@@ -14,7 +14,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: "teen-addiction-prediction:$GITHUB_SHA"
+      IMAGE_NAME: "teen-addiction-prediction:${{ github.sha }}"
 
     steps:
       - name: Checkout code
