added pipeline to triggers

--- a/.github/workflows/midterm-project-ci-cd.yaml
+++ b/.github/workflows/midterm-project-ci-cd.yaml
@@ -8,6 +8,7 @@ on:
       - "midterm-project/**"
       - "!midterm-project/**/*.ipynb"
       - "!midterm-project/**/README.md"
+      - ".github/workflows/**" 
   #workflow_dispatch:
 
 jobs:
