--- a/.github/workflows/midterm-project-ci-cd.yaml
+++ b/.github/workflows/midterm-project-ci-cd.yaml
@@ -34,7 +34,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t $IMAGE_NAME .
+          docker build -t $IMAGE_NAME midterm-project
 
       - name: Tag Docker image for ECR
         run: |
