--- a/midterm-project/pyproject.toml
+++ b/midterm-project/pyproject.toml
@@ -7,10 +7,12 @@ requires-python = ">=3.12"
 dependencies = [
     "fastapi>=0.121.0",
     "jupyter>=1.1.1",
+    "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
     "requests>=2.32.5",
     "scikit-learn>=1.7.2",
+    "seaborn>=0.13.2",
     "uvicorn>=0.38.0",
     "xgboost>=3.1.1",
 ]
