--- a/capstone-project/pyproject.toml
+++ b/capstone-project/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
+    "mlflow>=3.8.1",
     "numpy>=2.4.0",
     "pandas>=2.3.3",
     "scikit-learn>=1.8.0",
