--- a/capstone-project/pyproject.toml
+++ b/capstone-project/pyproject.toml
@@ -5,12 +5,15 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.128.0",
     "jupyter>=1.1.1",
     "matplotlib>=3.10.8",
     "mlflow>=3.8.1",
     "numpy>=2.4.0",
     "pandas>=2.3.3",
+    "prefect>=3.6.9",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "uvicorn>=0.40.0",
     "xgboost>=3.1.2",
 ]
