--- a/capstone-project/pyproject.toml
+++ b/capstone-project/pyproject.toml
@@ -20,5 +20,8 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "httpx>=0.28.1",
+    "pytest>=9.0.2",
+    "pytest-asyncio>=1.3.0",
     "requests>=2.32.5",
 ]
