--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,16 @@
 
 # Logs
 **/*.log
+
+# Env
+**/.env
+
+# Terraform
+**/.terraform
+**/*.tfstate
+**/*.tfstate.backup
+**/crash.log
+**/override.tf
+**/override.tf.json
+**/terraform.tfvars
+**/terraform.tfvars.json
