--- a/capstone-project/docker-compose.yaml
+++ b/capstone-project/docker-compose.yaml
@@ -24,8 +24,29 @@ services:
       - "8000:8000"
     environment:
       - MLFLOW_URL=http://mlflow:5000
+      - MODEL_NAME=Energy Consumption RandomForestRegression - Full Train
     depends_on:
       - mlflow
+    networks:
+      - app-network
+
+  prefect:
+    image: prefecthq/prefect:3-latest
+    command: prefect server start --host 0.0.0.0
+    ports:
+      - "4200:4200"
+    depends_on:
+      - mlflow
+    networks:
+      - app-network
+  training-pipeline:
+    image: training-pipeline:1.0.0
+    environment:
+      - PREFECT_API_URL=http://prefect:4200/api
+      - MLFLOW_URL=http://mlflow:5000
+      - MODEL_NAME=Energy Consumption RandomForestRegression - Full Train
+    depends_on:
+      - prefect
     networks:
       - app-network
 
