--- a/.github/workflows/capstone-ci.yaml
+++ b/.github/workflows/capstone-ci.yaml
@@ -21,9 +21,7 @@ jobs:
     - name: Checkout source
       uses: actions/checkout@v4
 
-    # -------------------------
     # Python Setup
-    # -------------------------
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
@@ -34,32 +32,28 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pytest pytest-cov safety
-     # -------------------------
-    # Unit Tests + Coverage (FAILS PIPELINE ON ERROR)
-    # -------------------------
+
+    # Unit Tests + Coverage
     - name: Run unit tests
       run: |
-        pytest --cov=app --cov-report=xml
+        cd capstone-project
+        pytest --cov-report=xml
 
-    # -------------------------
     # Dependency Vulnerability Scan
-    # -------------------------
     - name: Dependency check (Safety)
       run: |
         safety check --full-report || true
 
-    # -------------------------
     # SonarQube Scan (SAST)
-    # -------------------------
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@v2
+      with:
+        projectBaseDir: capstone-project
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-    # -------------------------
     # SonarQube Quality Gate (HARD FAIL)
-    # -------------------------
     - name: SonarQube Quality Gate
       uses: sonarsource/sonarqube-quality-gate-action@v1
       timeout-minutes: 5
@@ -67,18 +61,14 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-    # -------------------------
     # Docker Login
-    # -------------------------
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    # -------------------------
     # Docker Build
-    # -------------------------
     - name: Build Docker image
       run: |
         docker build \
@@ -86,45 +76,38 @@ jobs:
           -t ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }} \
           .
 
-    # -------------------------
-    # Smoke Test (FAILS PIPELINE IF SCRIPT FAILS)
-    # -------------------------
+    # Smoke Test
     - name: Run smoke tests
       run: |
         chmod +x capstone-project/server/scripts/smoke-test.sh
         ./capstone-project/server/scripts/smoke-test.sh
 
-    # -------------------------
     # Trivy Image Scan
-    # -------------------------
     - name: Scan image with Trivy
       uses: aquasecurity/trivy-action@0.20.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-web:${{ github.sha }}
+        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }}
         format: table
         exit-code: 1
         severity: CRITICAL,HIGH
 
-    # -------------------------
-    # Push Docker Image (ONLY IF PREVIOUS STEPS PASS)
+    # Push Docker Image
     # -------------------------
     - name: Push Docker image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }}
 
-    # -------------------------
     # Update Kubernetes Manifest
-    # -------------------------
     - name: Update Kubernetes manifest image tag
       run: |
         sed -i \
           "s|image: .*|image: ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }}|" \
-          k8s/deployment.yaml
+          capstone-project/kubernetes/server/deployment.yaml
 
     - name: Commit updated manifest
       run: |
         git config user.name "github-actions"
         git config user.email "github-actions@github.com"
-        git add k8s/deployment.yaml
+        git add capstone-project/kubernetes/server/deployment.yaml
         git commit -m "Update image tag to ${{ github.sha }}" || echo "No changes"
         git push
