--- a/.github/workflows/capstone-ci.yaml
+++ b/.github/workflows/capstone-ci.yaml
@@ -25,12 +25,11 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: "3.11"
+        python-version: "3.12"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
         pip install pytest pytest-cov safety
 
     # Unit Tests + Coverage
@@ -40,11 +39,11 @@ jobs:
         pytest --cov-report=xml
 
     # Dependency Vulnerability Scan
-    - name: Dependency check (Safety)
+    - name: Dependency check - Safety
       run: |
         safety check --full-report || true
 
-    # SonarQube Scan (SAST)
+    # SonarQube Scan - SAST
     - name: SonarQube Scan
       uses: sonarsource/sonarqube-scan-action@v2
       with:
@@ -53,7 +52,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-    # SonarQube Quality Gate (HARD FAIL)
+    # SonarQube Quality Gate
     - name: SonarQube Quality Gate
       uses: sonarsource/sonarqube-quality-gate-action@v1
       timeout-minutes: 5
@@ -92,7 +91,6 @@ jobs:
         severity: CRITICAL,HIGH
 
     # Push Docker Image
-    # -------------------------
     - name: Push Docker image
       run: |
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }}
