--- a/capstone-project/kubernetes/local/kind/kind-config.yaml
+++ b/capstone-project/kubernetes/local/kind/kind-config.yaml
@@ -10,3 +10,6 @@ nodes:
       - containerPort: 30080
         hostPort: 30080
         protocol: TCP
+      - containerPort: 4200
+        hostPort: 4200
+        protocol: TCP
