--- a/.github/workflows/capstone-ci.yaml
+++ b/.github/workflows/capstone-ci.yaml
@@ -7,6 +7,7 @@ on:
     paths:
     - "capstone-project/server/Dockerfile"
     - "capstone-project/server/predict.py"
+    - ".github/workflows/capstone-ci.yaml"
   workflow_dispatch:
 
 env:
@@ -32,7 +33,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-cov safety fastapi
+        pip install -r capstone-project/server/requirements.txt
+        pip install pytest pytest-cov safety
 
     # Unit Tests + Coverage
     - name: Run unit tests
