--- a/capstone-project/sonar-project.properties
+++ b/capstone-project/sonar-project.properties
@@ -1,8 +1,8 @@
 sonar.projectKey=energy-consumption-service
 sonar.projectName=energy-consumption-service
-sonar.sources=server
-sonar.tests=tests
-sonar.python.coverage.reportPaths=coverage.xml
+sonar.sources=capstone-project/server
+sonar.tests=capstone-project/tests
+sonar.python.coverage.reportPaths=capstone-project/coverage.xml
 sonar.python.version=3.12
 sonar.language=python
 sonar.sourceEncoding=UTF-8
