fixed properties file

--- a/capstone-project/sonar-project.properties
+++ b/capstone-project/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=energy-consumption-service
 sonar.projectName=energy-consumption-service
 sonar.sources=capstone-project/server
-sonar.tests=capstone-project/tests
+sonar.tests=tests
 sonar.python.coverage.reportPaths=capstone-project/coverage.xml
 sonar.python.version=3.12
 sonar.language=python
