--- a/.github/workflows/capstone-ci.yaml
+++ b/.github/workflows/capstone-ci.yaml
@@ -71,8 +71,8 @@ jobs:
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: $DOCKERHUB_USERNAME
-        password: $DOCKERHUB_TOKEN
+        username: ${{ env.DOCKERHUB_USERNAME }}
+        password: ${{ env.DOCKERHUB_TOKEN }}
 
     # Docker Build
     - name: Build Docker image
@@ -92,7 +92,7 @@ jobs:
     - name: Scan image with Trivy
       uses: aquasecurity/trivy-action@0.20.0
       with:
-        image-ref: ${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:${{ github.sha }}
+        image-ref: ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}
         format: table
         exit-code: 1
         severity: CRITICAL,HIGH
