--- a/.github/workflows/capstone-ci.yaml
+++ b/.github/workflows/capstone-ci.yaml
@@ -10,6 +10,9 @@ on:
     - ".github/workflows/capstone-ci.yaml"
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   IMAGE_NAME: energy-prediction-server
   IMAGE_TAG: ${{ github.sha }}
@@ -23,6 +26,8 @@ jobs:
     steps:
     - name: Checkout source
       uses: actions/checkout@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
 
     # Python Setup
     - name: Set up Python
